src/App.css
.App{
  text-align: center;
  background-color: #f4f4f4;
  min-height: 100vh;
  max-height: 100%;
}
.Navbar{
  background-color: #022E6B;
  display: flex;
  flex-direction: row;
  align-items: center;
  position: sticky;
  top: 0;
  z-index: 1;
  padding: 15px;
  .buttons{
    margin-left: auto;
  }
  img{
    width: 100px;
  }
  button{
    margin: 10px;
    padding: 11px;
    border-radius: 15px;
    cursor: pointer;
    background-color: #ffffff;
    border: none;
    font-weight: 700;
  }

  button:hover{
    scale: 1.1;
  }

}
.card_container{
  width: 80%;
  margin: 0 auto;
}
.Card{
  background-color: #ffffff;
  display: inline-block;
  align-self: center;
  width: 250px;
  box-shadow: 1px 2px  rgba(0, 0, 0, 0.111);
  padding: 5px 0;
  border-radius: 10px;
  margin: 10px;
  position: relative;
  border: solid 1px rgba(0, 0, 0, 0.111);
  font-weight: 300;

  
  .img-container{
    height:250px;
    background-color: #ffffff;
    
  }
  
  img{
    width: 100%;
    height: 100%;
    object-fit: cover;
  }

  .header{
    text-align: left;
    font-size: 1.5rem;
    padding: 5px 20px;
  }
  .footer{
    text-align: right;
    padding: 6px 20px;
    font-weight: 300;
  }
  .socials{
    position: absolute;
    background-color: #ffffff;
    width: 100px;
    z-index: 0.5;
    left: 50%;
    top: 50%;
    transform: translate(-50%,-50%);
    border-radius: 10px;
    padding: 5px 0;
    padding: 12px;
    box-shadow: 3px 5px  rgba(0, 0, 0, 0.111);
  }


  a{
    all: unset;
    cursor: pointer;
  }

  .bi{
    font-size: 20px;
  }

  .bi:hover{
    font-size: 24px;
    transition: 0.5;
  }
  .bi-facebook{
    color: blue;
  }

  .bi-instagram{
    color: #C13584;
  }

  .bi-tiktok{
    color: black;
  }
  .links{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
  }
}

.Card:hover{
  img{
    filter: blur(3px);
    z-index: -1;
    transition: 0.3s;
  }
  scale: 1.01;
  transition: 0.6s;

}

.Filter{
  width: 80%;
  padding: 15px;
  text-align: left;
  margin: 0 auto;
  
  button{
    margin: 5px;
    padding: 10px;
    border-radius: 10px;
    border: solid 2px #022E6B;
    background-color: #ffffff;
    }

  button:hover{
    scale: 1.1;
    transition: 0.2s ease-in;
  }
}

.Footer{
  position: sticky;
  bottom: 0;
  padding: 10px 0;
}
@media screen and (max-width:1000px) {
  .Card{
    display: block;
    margin: 10px auto;
  }
  .Filter{
    width: 100%;
  }
}

